bugfix: email text editor overflow when height is much

--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -7465,6 +7465,7 @@ div.popup-email-text-edit {
 	-moz-border-radius	: 4px 4px 4px 4px;
 	border				: 1px solid #000000;
 	background-color	: rgba(255, 255, 255, 0.6);
+	overflow-y			: auto;
 }
 
 .popup-email-text-edit .variables ul {
@@ -7524,6 +7525,10 @@ div.popup-email-text-edit {
 	margin	: 0em;
 	width	: 100%;
 }
+
+.popup-email-text-edit .tab-group .tab-page
+	max-height 40em
+	overflow-y auto
 
 .popup-email-text-edit > .tab-group div.tab {
 	padding	: 0.25em 0.5em;
